# the-halting-mother

./: .gitignore  PianoMiglioramentoEsperimenti.md  README.md  ValutazioneEsperimenti.md  main.py  pyproject.toml
Relazione/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
doc/: AlgoritmiElaborato.md  CampagnaSperimentaleClaude.md  CampagnaSperimentaleNotebookLM.md  JustificazioneScelte.md  Ottimizzazione1.md  algoritmi.md  implementation_plan.md  tempiRisultati.md  walkthrough.md
grids/: grid.json  grid_esempio_semplice.json  grid_generata_esempio.json  grid_report_esempio.json  grid_test.json
results/: ablation_ottimizzazioni.json  component_check_results.json  density_results.json  density_results_multiseme.json  divario_anytime.json  greedy_seed_results.json  maze_results.json  mix_comparison.json  multiseme_results.json  ordering_comparison.json  ordering_comparison_multiseme.json  pruning_comparison.json  pruning_comparison_multiseme.json  rianalisi_metriche.json  scaling_results.json  simmetria_campagna.json  symmetry_per_type.json
scripts/: README.md  _common.py  ablation_ottimizzazioni.py  aggiorna_scaling_30.py  campagna_densita_multiseme.py  campagna_multiseme.py  campagna_potatura_ordinamento_multiseme.py  consolida_scatter.py  esperimento_maze.py  esperimento_mix.py  esperimento_ottimizzazioni.py  genera_grafico_memoria.py  genera_immagine_cammini_liberi.py  genera_immagine_contesto.py  genera_immagine_esplorazione_potatura.py  genera_immagine_estensione_componenti.py  genera_immagine_panoramica.py  rianalisi_metriche.py  (+7 more)
(+29 files in other folders)
